integrated swagger ui into the server
